# HEMVM_OOPSLA2025

./: .dockerignore  Artifact Overview.md  Dockerfile  README.md  build_and_run.sh  cleanup.sh  hello_world.py
EVoM-cfx-rust-oopsla24/: .gitignore  Cargo.toml
EVoM-cfx-rust-oopsla24/client/: Cargo.toml
EVoM-cfx-rust-oopsla24/core/: Cargo.toml
EVoM-cfx-rust-oopsla24/dev-chain/: development.toml  genesis.txt
EVoM-cfx-rust-oopsla24/pos_config/: pos_key
MoviEth/: .gitignore  Cargo.toml  profile.pb
MoviEth/api/: Cargo.toml
MoviEth/api/ethrpc/: Cargo.toml
MoviEth/api/ethrpc/src/: lib.rs
MoviEth/api/ethrpc/src/impls/: eth.rs
MoviEth/api/ethrpc/src/traits/: eth.rs
MoviEth/api/ethrpc/src/types/: block.rs  block_number.rs  call_request.rs  log.rs  mod.rs  receipts.rs  transaction.rs
MoviEth/api/src/: lib.rs  (+8 more)
MoviEth/aptos-move/block-executor/: Cargo.toml
MoviEth/aptos-move/block-executor/src/: adapter_common.rs  aptos_vm.rs  aptos_vm_impl.rs  cached_state_view.rs  counters.rs  data_cache.rs  errors.rs  errors2.rs  evm_context_loader.rs  executed_trees.rs  executor.rs  lib.rs  read_write_set_analysis.rs  state_view.rs  system_module_names.rs  task.rs  transaction_metadata.rs  txn_last_input_output.rs  view.rs
MoviEth/aptos-move/block-executor/src/block_executor/: mod.rs  vm_wrapper.rs
MoviEth/aptos-move/block-executor/src/move_vm_ext/: vm.rs
MoviEth/aptos-move/block-executor/src/proptest_types/: tests.rs  types.rs
MoviEth/aptos-move/ethereum-vm/: Cargo.toml
MoviEth/aptos-move/ethereum-vm/src/: context.rs  events.rs  lib.rs  machine.rs  outcome.rs  state.rs  storage_key.rs  transaction.rs
MoviEth/aptos-node/: Cargo.toml
MoviEth/cfx-evm/: Cargo.toml
MoviEth/cfx-evm/backend/state/: Cargo.toml
MoviEth/cfx-evm/backend/state/src/: lib.rs  state_trait.rs
MoviEth/cfx-evm/backend/statedb/: Cargo.toml
MoviEth/cfx-evm/backend/statedb/src/: impls.rs  lib.rs  statedb_ext.rs
MoviEth/cfx-evm/backend/storage/: Cargo.toml
MoviEth/cfx-evm/backend/storage/src/: in_memory.rs  lib.rs
MoviEth/cfx-evm/examples/: execute.rs
MoviEth/cfx-evm/src/: lib.rs
MoviEth/cfx-evm/src/builtin/: blake2f.rs  mod.rs
MoviEth/cfx-evm/src/call_create_frame/: context.rs  executive.rs  frame.rs  result.rs  stack.rs  tests.rs
MoviEth/cfx-evm/src/evm/: factory.rs  tests.rs  vmtype.rs
MoviEth/cfx-evm/src/evm/interpreter/: gasometer.rs  informant.rs  memory.rs  mod.rs  shared_cache.rs
MoviEth/cfx-evm/src/execution/: estimate.rs  executed.rs  executor.rs  mod.rs
MoviEth/cfx-evm/src/internal_contract/components/: contract.rs  contract_map.rs  event.rs  function.rs
MoviEth/cfx-evm/src/internal_contract/contracts/: context.rs  cross_space.rs  mod.rs
MoviEth/cfx-evm/src/observer/: error_unwind.rs  trace.rs
MoviEth/cfx-evm/src/spec/: spec.rs
MoviEth/cfx-evm/src/state/: account_entry.rs  account_entry_tests.rs  mod.rs  state_tests.rs
MoviEth/cfx-evm/src/vm/: action_params.rs  call_create_type.rs  error.rs
MoviEth/cfx-evm/utils/cfx_types/src/: lib.rs
MoviEth/cfx-evm/utils/cfxkey/src/: brain.rs  brain_recover.rs  extended.rs  lib.rs  prefix.rs  secret.rs  signature.rs
MoviEth/cfx-evm/utils/internal-common/src/: chain_id.rs
MoviEth/cfx-evm/utils/malloc_size_of_derive/src/: lib.rs
MoviEth/cfx-evm/utils/memory-cache/src/: lib.rs
MoviEth/cfx-evm/utils/primitives/: Cargo.toml
MoviEth/cfx-evm/utils/primitives/src/: account.rs  block.rs  filter.rs  log_entry.rs  receipt.rs  storage.rs  transaction.rs
MoviEth/cfx-evm/utils/sha3-macro/src/: lib.rs
MoviEth/cfx-evm/utils/solidity-abi-derive/src/: lib.rs
MoviEth/cfx-evm/utils/solidity-abi/src/: tests.rs
MoviEth/consensus/: Cargo.toml
MoviEth/mempool/: Cargo.toml
MoviEth/performance_vlad/: pipeline.sh  tx_performance_fixed.py  tx_performance_tester_aptos_repo.py
MoviEth/sdk/: Cargo.toml
MoviEth/types/: Cargo.toml
MoviEth/vm-validator/: Cargo.toml
aptos-core/: Cargo.toml  profile.pb
aptos-core/api/: Cargo.toml
aptos-core/api/src/: accounts.rs  context.rs  events.rs  lib.rs  runtime.rs  state.rs  transactions.rs  view_function.rs
aptos-core/api/src/executor/src/: block_executor.rs  chunk_executor.rs  db_bootstrapper.rs  fuzzing.rs  metrics.rs  mod.rs
aptos-core/api/src/executor/src/components/: apply_chunk_output.rs  chunk_output.rs
aptos-core/api/src/executor/src/components/block_tree/: mod.rs
aptos-core/api/src/executor/src/mock_vm/: mod.rs
aptos-core/api/src/executor/tests/: storage_integration_test.rs
cross_vm_demos/: .gitattributes  .gitignore  eth_native_token_intra_100k.txt  requirements.txt
cross_vm_demos/.aptos/: config.yaml
cross_vm_demos/compound_experiments/: abis.py  generate_tx_cross_eth_compound.py  generate_tx_native_eth_compound.py  patched_aptos_sdk.py  utils.py
cross_vm_demos/experiment_runner/: abis.py  example_usage.py  experiment_tps_calculator.py  funding_utils.py  prototype_setup.py  runner.py  runner_cfx.py  runner_clean_aptos.py  runner_multi_worker_prototype.py
cross_vm_demos/move_scripts/: balance_of.py  common.py  sample.ipynb  send_call_evm_tx.py  send_transfer_evm_tx.py  test_account_balance.py
cross_vm_demos/pregenerated_transactions_files_multiworker/: eth_custom_token_cross_multiworker_500k.txt  eth_custom_token_intra_multiworker_500k.txt  eth_native_token_cross_multiworker_500k.txt  eth_native_token_intra_multiworker_500k.txt  move_custom_token_cross_multiworker_500k.txt  move_custom_token_intra_500k.txt  move_native_token_cross_multiworker_500k.txt  move_native_token_cross_multiworker_500k_cpy.txt  move_native_token_intra_500k.txt  pancakeswap_cross_multiworker_500k.txt  pancakeswap_intra_multiworker_500k.txt  salad_ERC_custom_coin_e55_m35_c10_500k.txt  salad_ERC_custom_coin_e60_m40_500k.txt  salad_native_coin_e70_m20_ec5_mc5_multiorigin_500k.txt  salad_native_coin_e80_m20_500k.txt  salad_pancake_custom15_pancake15_erc60_crosspan10_4k.txt  salad_pancake_custom15_pancake15_erc60_crosspan10_500k.txt  salad_pancake_custom15_pancake15_erc70_4k.txt  salad_pancake_custom15_pancake15_erc70_500k.txt  salad_uniswap_intra20_cross10_erc30_custom40_500k.txt  (+5 more)
(+406 files in other folders)
