[package]
name = "aptos-api"
description = "Aptos REST API"
version = "0.2.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-std="1.12.0"
pprof = { version = "0.12.1", features = ["flamegraph", "protobuf", "prost-codec"] }
anyhow = { workspace = true }
aptos-api-types = { workspace = true }
aptos-build-info = { workspace = true }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-gas = { workspace = true }
aptos-logger = { workspace = true }
aptos-mempool = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-state-view = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
mime = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-infallible = { workspace = true }
aptos-scratchpad = { workspace = true }
aptos-secure-net = { workspace = true }
rayon = { workspace = true }


[dev-dependencies]
aptos-api-test-context = { workspace = true }
aptos-gas = { workspace = true, features = ["testing"] }
aptos-proptest-helpers = { workspace = true }
aptos-sdk = { workspace = true }
move-package = { workspace = true }
percent-encoding = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-config = { workspace = true }
aptos-db = { workspace = true }
aptos-executor-test-helpers = { workspace = true }
aptos-genesis = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm-genesis = { workspace = true }
warp = { workspace = true }

[features]
failpoints = ["fail/failpoints"]
