[package]
name = "ethrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std="1.12.0"
pprof = { version = "0.12.1", features = ["flamegraph", "protobuf", "prost-codec"] }
anyhow = { workspace = true }
aptos-api = { workspace = true }
aptos-block-executor = {workspace = true}
aptos-api-types = { workspace = true }
aptos-executor = {workspace = true}
aptos-config = { workspace = true }
aptos-logger = { workspace = true }
aptos-types = { workspace = true }
ethereum-types = { workspace = true }
jsonrpsee = { workspace = true }
rlp = { workspace = true }
rlp-derive = { workspace = true }
serde = { workspace = true }
cfx-primitives = { workspace = true }
tokio = { workspace = true }
aptos-evm = { workspace = true }
serde_json = { workspace = true }
cfx-evm = { workspace = true }
cfx-state = { workspace = true }
cfx-types = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-vm = { workspace = true }
aptos-state-view = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-gas = { workspace = true }
aptos-infallible = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-scratchpad = { workspace = true }
aptos-secure-net = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
itertools = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
aptos-cached-packages = { workspace = true }
aptos-config = { workspace = true }
aptos-db = { workspace = true }
aptos-executor-test-helpers = { workspace = true }
aptos-genesis = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm-genesis = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

