[package]
name = "aptos-block-executor"
description = "Aptos block transaction executor library, parallel execution via Block-STM"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-aggregator = { workspace = true }
aptos-framework =  { workspace = true }
aptos-logger = {workspace = true}
aptos-crypto = {workspace = true}
move-core-types = { workspace = true }
aptos-infallible = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-mvhashmap = { workspace = true }
aptos-state-view = { workspace = true }
aptos-types = { workspace = true }
aptos-evm = { workspace = true }
cfx-primitives = { workspace = true }
arc-swap = { workspace = true }
bcs = { workspace = true }
criterion = { workspace = true, optional = true }
crossbeam = { workspace = true }
crossbeam-queue = { workspace = true }
dashmap = { workspace = true }
move-binary-format = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true }
move-vm-types = {workspace = true}
move-vm-runtime = { workspace = true}
move-bytecode-utils = { workspace = true }
move-table-extension = { workspace = true }
aptos-scratchpad = {workspace = true}
aptos-gas = {workspace = true}
move-bytecode-verifier = {workspace = true}
ethereum-types = { workspace = true }
fail = { workspace = true }
cfx-state = { workspace = true }
move-stdlib = { workspace = true }
aptos-crypto-derive = {workspace = true}
read-write-set-dynamic = { workspace = true }
move-unit-test = { workspace = true, optional = true }
parking_lot = "0.12.0"


[dev-dependencies]
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
aptos-types = { workspace = true }

[features]
default = []
mirai-contracts = []
fuzzing = ["criterion", "proptest", "proptest-derive", "move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing", "aptos-framework/fuzzing"]
failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
testing = ["move-unit-test", "aptos-framework/testing"]

[[bench]]
name = "scheduler_benches"
harness = false
required-features = ["fuzzing"]

