[package]
name = "aptos-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
aptos-state-view = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
move-core-types = { workspace = true }
cfx-evm = { workspace = true }
cfx-storage = { workspace = true }
cfx-primitives = { workspace = true }
cfx-types = { workspace = true }
solidity-abi = { workspace = true }
solidity-abi-derive = { workspace = true }
aptos-logger = { workspace = true }